# ml-learning-labs

./: .gitignore  LICENSE  README-ESP.md  README.md  pyproject.toml
1_hydra_learning/config/: config.yaml
1_hydra_learning/config/data/: data.yaml
1_hydra_learning/config/model/: decission_tree_regressor.yaml  random_forest.yaml
1_hydra_learning/src/: main.py
project/.github/workflows/: lint.yaml
project/config/: config.yaml
project/config/data/: data.yaml
project/config/model/: decision_tree_classifier.yaml  decision_tree_regressor.yaml  random_forest_classifier.yaml
project/src/: load_data.py
project/src/validation/: config_validation.py  data_validation.py  model_validation.py
